# beam-automigrate

./: .gitignore  .gitlab-ci.yml  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  beam-automigrate.cabal  beam-migrate-prototype.cabal  cabal.project  release.nix  shell.nix  stack.yaml  test.nix
.ci/: default.nix  ghc-beam-overrides.nix  listdirs.nix  nixpkgs.nix
.ci/nix-filter/: github.json
.ci/nix-thunk/: github.json
.ci/nixpkgs/nixos1809/: github.json
.ci/nixpkgs/nixos2003/: github.json
.ci/nixpkgs/unstable/: github.json
.github/workflows/: haskell.yml  terraform.yml
.vim/: coc-settings.json
bench/: Main.hs  README.md
dep/beam/: github.json
dep/postgresql-simple/: github.json
dep/reflex-platform/: github.json
examples/: Example.hs  ForeignKeys.hs  Main.hs  SubDatabases.hs
integration-tests/: Main.hs
integration-tests/PostgresqlSyntax/Data/: Orphans.hs
large-migration-test/: Main.hs  README.md
src/Database/Beam/: AutoMigrate.hs  Migrate.hs
src/Database/Beam/AutoMigrate/: Annotated.hs  BenchUtil.hs  Compat.hs  Diff.hs  Eval.hs  Generic.hs  Parser.hs  Postgres.hs  Types.hs  Unsafe.hs  Util.hs  Validity.hs
src/Database/Beam/AutoMigrate/Schema/: Gen.hs
src/Database/Beam/Migrate/: Annotated.hs  BenchUtil.hs  Compat.hs  Diff.hs  Example.hs  Generic.hs  New.hs  Postgres.hs  Types.hs  Util.hs  Validity.hs
src/Database/Beam/Migrate/Example/: ForeignKeys.hs
src/Database/Beam/Migrate/New/: Annotated.hs  BenchUtil.hs  Compat.hs  Diff.hs  Generic.hs  Postgres.hs  Types.hs  Util.hs  Validity.hs
src/Database/Beam/Migrate/New/Schema/: Gen.hs
src/Database/Beam/Migrate/Schema/: Gen.hs
test/: Main.hs
test-internal/Database/Beam/Migrate/: BenchUtil.hs
test-internal/Database/Beam/Migrate/New/Schema/: Gen.hs
test/Test/Database/Beam/Migrate/: Arbitrary.hs
tests/: Main.hs
tests/Test/Database/Beam/AutoMigrate/: Arbitrary.hs
tests/Test/Database/Beam/Migrate/: Arbitrary.hs
tests/Test/Database/Beam/Migrate/New/: Arbitrary.hs
util/Database/Beam/AutoMigrate/: TestUtils.hs
