cabal-version:       >=1.10
name:                beam-migrate-prototype
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  exposed-modules:
                       Database.Beam.Migrate
                       Database.Beam.Migrate.Compat
                       Database.Beam.Migrate.Diff
                       Database.Beam.Migrate.Generic
                       Database.Beam.Migrate.Postgres
                       Database.Beam.Migrate.Types
                       Database.Beam.Migrate.Util
                       Database.Beam.Migrate.Schema.Gen
  other-modules:
                       Database.Beam.Migrate.Example

  hs-source-dirs:      src

  build-depends:       base                 >= 4.9     && < 5.0
                     , beam-core            >= 0.8     && < 0.10
                     , beam-postgres        >= 0.3     && < 0.6
                     , bytestring           < 0.12.0.0
                     , containers           >= 0.5.9.2 && < 0.8.0.0
                     , deepseq
                     , text                 >= 1.2.0.0 && < 1.3.0.0
                     , microlens 
                     , mtl
                     , postgresql-simple   < 0.7.0.0
                     , vector              < 0.13.0.0
                     -- needed to use beam's stock lenses
                     , time
                     , scientific
                     -- Needed only for the examples, (re)move eventually.
                     , QuickCheck             < 2.15.0.0
                     -- ^ Needed for schema generation
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
  if flag(werror)
    ghc-options:       -Werror
  if flag(ghcipretty)
    build-depends:     pretty-simple

test-suite beam-migrate-prototype-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
  build-depends:       base
                     , containers
                     , QuickCheck             < 2.15.0.0
                     , beam-migrate-prototype -any
                     , text
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings

benchmark beam-migrate-prototype-bench
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options:       -Wall -O2 -rtsopts
  hs-source-dirs:    bench
  main-is:           Main.hs
  build-depends:     base
                   , beam-migrate-prototype
                   , criterion
                   , containers
                   , deepseq
                   , QuickCheck             < 2.15.0.0

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

flag ghcipretty
  description: Enable pretty-show for pretty-printing purposes
  default:     False
  manual:      True
