name:                  beam-migrate-prototype
version:               0.1.0.0
license-file:          LICENSE
build-type:            Simple
cabal-version:         >=1.10
author:                Alfredo Di Napoli, Andres Löh and Well-Typed LLP
maintainer:            info@well-typed.com
category:              Database
synopsis:              DB migration library for beam, targeting Postgres.
description:
  This package offers an alternative to @<https://hackage.haskell.org/package/beam-migrate beam-migrate>@
  and can be used to migrate a database between different versions of a Haskell schema. It doesn't depend
  on @beam-migrate@ if not transitively (@beam-postgres@ depends on it, for example).

extra-source-files:    README.md
                       CHANGELOG.md

library
  exposed-modules:     Database.Beam.Migrate
                       Database.Beam.Migrate.Annotated
                       Database.Beam.Migrate.Compat
                       Database.Beam.Migrate.Diff
                       Database.Beam.Migrate.Generic
                       Database.Beam.Migrate.Postgres
                       Database.Beam.Migrate.Types
                       Database.Beam.Migrate.Util
                       Database.Beam.Migrate.Validity
                       Database.Beam.Migrate.Schema.Gen
                       Database.Beam.Migrate.BenchUtil

  hs-source-dirs:      src

  build-depends:       base                 >= 4.9      && < 5
                     , QuickCheck           >= 2.13     && < 2.15
                     , quickcheck-instances >= 0.3      && < 0.4
                     , aeson                >= 1.4.6    && < 1.5
                     , beam-core            >= 0.8      && < 0.10
                     , beam-postgres        >= 0.3      && < 0.6
                     , bytestring           >= 0.10.8.2 && < 0.12.0.0
                     , containers           >= 0.5.9.2  && < 0.8.0.0
                     , deepseq              >= 1.4.4    && < 1.6
                     , dlist                >= 0.8.0    && < 0.10
                     , microlens            >= 0.4.11   && < 0.6
                     , mtl                  >= 2.2.2    && < 2.4
                     , postgresql-simple    >= 0.6.2    && < 0.7.0.0
                     , scientific           >= 0.3.6    && < 0.5
                     , splitmix             >= 0.0.3    && < 0.1
                     , string-conv          >= 0.1.2    && < 0.3
                     , text                 >= 1.2.0.0  && < 1.3.0.0
                     , time                 >= 1.8.0    && < 1.9
                     , transformers         >= 0.5.6    && < 0.7
                     , vector               >= 0.12.0.3 && < 0.13.0.0

  default-language:    Haskell2010

  default-extensions:  DataKinds
                       FlexibleInstances
                       GADTs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies

  ghc-options:         -Wall

  if flag(werror)
    ghc-options:       -Werror

test-suite beam-migrate-prototype-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       Test.Database.Beam.Migrate.Arbitrary
  build-depends:       base
                     , QuickCheck
                     , beam-migrate-prototype -any
                     , containers
                     , pretty-simple
                     , tasty
                     , tasty-quickcheck
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite beam-migrate-prototype-integration-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      integration-tests tests
  main-is:             Main.hs
  other-modules:       Test.Database.Beam.Migrate.Arbitrary
  build-depends:       base
                     , QuickCheck
                     , beam-migrate-prototype -any
                     , containers
                     , postgresql-simple
                     , pretty-simple
                     , tasty
                     , tasty-quickcheck
                     , text
                     , tmp-postgres >= 1.31.0.1 && < 1.35.0.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       ScopedTypeVariables
  if !flag(integration-tests)
    buildable:         False

executable beam-migrate-prototype-examples
  hs-source-dirs:      examples
  main-is:             Main.hs
  other-modules:       Example
                       ForeignKeys
                       SubDatabases
  build-depends:       base
                     , aeson
                     , beam-core
                     , beam-migrate-prototype -any
                     , beam-postgres
                     , postgresql-simple
                     , text
                     , time
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       MultiParamTypeClasses
                       TypeApplications
                       DataKinds
                       FlexibleInstances
                       StandaloneDeriving
                       FlexibleContexts
                       DeriveGeneric
                       TypeFamilies
  ghc-options:       -Wall -O2 -rtsopts
  if flag(werror)
    ghc-options:       -Werror
  if flag(ghcipretty)
    build-depends:     pretty-simple

executable beam-migrate-prototype-large-migration-test
  hs-source-dirs:      large-migration-test
  main-is:             Main.hs
  build-depends:       base
                     , beam-migrate-prototype -any
                     , beam-postgres
                     , containers
                     , postgresql-simple
                     , time
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:       -Wall -O2 -rtsopts

benchmark beam-migrate-prototype-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , QuickCheck
                     , beam-migrate-prototype -any
                     , beam-postgres
                     , bytestring
                     , containers
                     , criterion
                     , deepseq
                     , postgresql-simple
                     , splitmix
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -rtsopts

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

flag ghcipretty
  description: Enable pretty-show for pretty-printing purposes
  default:     False
  manual:      True

flag integration-tests
  description: Enable integration tests that talks to a Postgres DB.
  default:     False
  manual:      True
